<resources>
    <string name="app_name">Venda de Bebidas</string>
    <string name="customers">Clientes</string>
    <string name="drinks">Bebidas</string>
    <string name="currency_prefix">R$</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="address">Endereço</string>
    <string name="add_customer">Adicionar Cliente</string>
    <string name="edit_customer">Editar Cliente</string>
    <string name="remove_customer">Remover Cliente</string>
    <string name="volume">Volume</string>
    <string name="isAlcoholic">É alcoólico?</string>
    <string name="price">Preço</string>
    <string name="add_drink">Adicionar Bebida</string>
    <string name="edit_drink">Editar Bebida</string>
    <string name="remove_drink">Remover Bebida</string>
    <string name="alcoholic_drink">Bebida alcoólica</string>
    <string name="not_alcoholic_drink">Não é Bebida alcoólica</string>
    <string name="add_order">Adicionar Venda</string>
    <string name="start_order">Iniciar Venda</string>
    <string name="edit_order">Editar Venda</string>
    <string name="remove_order">Remover Venda</string>
    <string name="order_items">Itens da Venda</string>
    <string name="order_item_qty">Quantidade</string>
    <string name="add_order_item">Adicionar Bebida na Venda</string>
    <string name="edit_order_item">Editar Bebida na Venda</string>
    <string name="remove_order_item">Remover Bebida na Venda</string>
</resources>
